crates/gateway/tests/snapshots/snapshot_tests__snapshot_classification_output_text_request.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 449
expression: classification
---
estimated_tokens: "[token_count]"
format: Chat
quality_preference: Balanced
required_capabilities:
  streaming: false
  thinking: false
  tools: false
  vision: false
