crates/gateway/tests/snapshots/snapshot_tests__snapshot_classification_output_tool_request.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 485
expression: classification
---
estimated_tokens: "[token_count]"
format: Chat
quality_preference: Balanced
required_capabilities:
  streaming: false
  thinking: false
  tools: true
  vision: false
