crates/gateway/tests/snapshots/snapshot_tests__snapshot_classification_output_vision_request.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 467
expression: classification
---
estimated_tokens: "[token_count]"
format: Chat
quality_preference: Balanced
required_capabilities:
  streaming: true
  thinking: false
  tools: false
  vision: true
