crates/gateway/tests/snapshots/snapshot_tests__snapshot_config_with_credentials.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 75
expression: config
---
server:
  port: 3000
  host: "[host]"
  timeout_secs: 120
  auth_tokens: []
  trust_proxy_headers: false
credentials:
  - id: anthropic-primary
    provider: anthropic
    api_key: sk-test-key
    base_url: ~
    organization: ~
    allowed_models: []
    priority: 10
    daily_quota: ~
    rate_limit: ~
  - id: openai-backup
    provider: openai
    api_key: sk-openai-key
    base_url: ~
    organization: ~
    allowed_models:
      - gpt-4
      - gpt-3.5-turbo
    priority: 5
    daily_quota: ~
    rate_limit: ~
routing:
  strategy: weighted
  session_affinity: true
  min_healthy_credentials: 1
  fallback_depth: 2
providers: {}
