crates/gateway/tests/snapshots/snapshot_tests__snapshot_credential_minimal_fields.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 161
expression: cred
---
id: minimal-cred
provider: anthropic
api_key: sk-minimal
base_url: ~
organization: ~
allowed_models: []
priority: 0
daily_quota: ~
rate_limit: ~
