crates/gateway/tests/snapshots/snapshot_tests__snapshot_credential_with_all_fields.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 147
expression: cred
---
id: full-cred
provider: openai
api_key: sk-full-test-key
base_url: "https://custom.openai.proxy.com"
organization: org-example-123
allowed_models:
  - gpt-4
  - gpt-4-turbo
priority: 15
daily_quota: 10000
rate_limit: 60
