crates/gateway/tests/snapshots/snapshot_tests__snapshot_default_config.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 27
expression: config
---
server:
  port: 3000
  host: "[host]"
  timeout_secs: 120
  auth_tokens: []
  trust_proxy_headers: false
credentials: []
routing:
  strategy: weighted
  session_affinity: true
  min_healthy_credentials: 1
  fallback_depth: 2
providers: {}
