crates/gateway/tests/snapshots/snapshot_tests__snapshot_default_routing_policy.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 43
expression: config
---
strategy: weighted
session_affinity: true
min_healthy_credentials: 1
fallback_depth: 2
