crates/gateway/tests/snapshots/snapshot_tests__snapshot_error_response_config_error.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 394
expression: error
---
error:
  message: "Gateway is improperly configured: No authentication tokens available."
  type: config_error
