crates/gateway/tests/snapshots/snapshot_tests__snapshot_error_response_missing_auth.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 383
expression: error
---
error:
  message: "Missing Authorization header. Use: Authorization: Bearer <token>"
  type: invalid_request_error
